--- a/public/update-data.html
+++ b/public/update-data.html
@@ -8,24 +8,27 @@
   <link rel="icon" type="image/x-icon"ç href="favicon.ico">
 </head>
 <body>
-  <h1>Quote API</h1>
+  <h1>Quote/Fragment API</h1>
   <nav>
     <a href="index.html">Home</a>
-    <a href="add-quote.html">Add a New Quote</a>
+    <a href="add-data.html">Add a New Data</a>
+    <a href="update-data.html">Update Data</a>
   </nav>
-  <h2>Add a New Quote</h2>
+  <h2>Update a Quote</h2>
   <div class="inputs">
     <label for="quote">Quote text:</label>
     <input id="quote" value="">
     <label for="person">Person:</label>
     <input id="person" value="">
+    <label for="id">Quote ID</label>
+    <input type="number" id="id" value="">
   </div>
   <div>
-    <button id="submit-quote">Submit Your Quote</button>
+    <button id="submit-quote">Submit updated Quote</button>
   </div>
-  <div id="new-quote">
+  <div id="update-quote">
     
   </div>
-  <script src="add-quote.js"></script>
+  <script src="update-quote.js"></script>
 </body>
 </html>
